--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/GhOsT00712/HackerBox#readme",
   "dependencies": {
     "axios": "^1.3.3",
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "https": "^1.0.0"
